--- a/style.css
+++ b/style.css
@@ -286,3 +286,16 @@ homeBtn{
     margin: 30px auto;
     text-align: center;
 }
+
+ul li{
+    display: inline-block;
+    position: relative;
+}
+ul li a{
+    display: block;
+    padding: 20px 25px;
+    color: whitesmoke;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
